very temp, for presentation, genre pages, fixed scroll sidebar

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
             <span style="font-weight: bold;">genre-</span><span style="font-style:italic">ation</span>
         </span>
     </div>
-    <div id="chart"> </div>
+    <div id="chart" class="fullscreen"> </div>
     
     
     <script src="static/d3.v5.min.js"></script>
